# kairos

./: .env.example  .gitignore  README.md  connect.ipynb  kairos.toml  main.py  pyproject.toml
.kairos/: project.json
config/: research.json  study.json
docs/: architecture.md  async_dataflow_refactor_implementation_plan.md  async_dataflow_runtime_refactor.md  async_dataflow_trading_system_refactor.md  backtest_usability_and_cross_mode_consistency_roadmap.md  btc_options_research.md  btc_options_study.md  builtin_data_products_design.md  configuration_layering_and_run_config_design.md  connector_data_integration_usage.md  crypto_hourly_momentum_research_plan.md  crypto_hourly_momentum_study_plan.md  current_product_status.md  data_integration_boundary_refactor_plan.md  data_layout.md  data_product_design.md  data_product_usage.md  data_space_product_refactor_design.md  data_store_simplification_design.md  data_system_convergence_and_productization.md  data_system_final_acceptance.md  data_usage_product_design.md  examples_suite_acceptance.md  funding_arb_live_manual_verification.md  kairospy_file_positioning_inventory.md  market_data_long_soak_runbook.md  market_data_provider_integration_plan.md  mock_data_spec.md  naming_audit.md  options_research_architecture.md  options_study_architecture.md  position_lab_manual_control_flow.md  product_acceptance_matrix.md  professional_quant_runtime_design.md  quant_system_refactor_plan.md  reference_and_treasury_architecture_refactor_plan.md  release_pypi.md  research_data_guide.md  research_data_platform_redesign.md  research_strategy_backtest_live_convergence_plan.md  (+16 more)
examples/: README.md  __init__.py  _support.py  btc_sma_first.py  ccxt_pro_orderbook_smoke.py  current_option_underlyings.ipynb  explore_perp.py  four_product_user_path.sh  history_analysis.ipynb  massive_data_quality.ipynb  massive_research_readiness.ipynb  massive_study_diagnostics.ipynb  nvda_options_2026.ipynb  printer.py  spxw_popular_options_2026.ipynb  spy_volatility_smile.ipynb  study_explore.py
kairos/: __init__.py  __main__.py  api.py  cli_control.py  cli_output.py  configuration.py  product_surface.py  product_workflow.py  project.py
kairospy/: __init__.py  __main__.py  api.py  cli_control.py  cli_output.py  configuration.py  environment.py  product_surface.py  product_workflow.py  project.py
research/: __init__.py  btc_options_readiness.py  (+4 more)
(+1528 files in other folders)
