[project]
name = "kairospy"
version = "0.1.0"
description = "Venue-independent multi-asset data, workspace, run, accounting, and execution orchestration"
requires-python = ">=3.11"
dependencies = ["ib_async>=2.1,<3", "websocket-client>=1.8,<2"]

[project.optional-dependencies]
cli = ["rich>=13,<15", "questionary>=2,<3"]
notebook = ["jupyterlab>=4,<5", "pandas>=2,<4", "matplotlib>=3.8,<4", "mplfinance>=0.12.10b0,<1"]
massive = ["websockets>=12,<17"]
data = ["pyarrow>=22,<26"]
query = ["pyarrow>=22,<26", "duckdb>=1.3,<2", "polars>=1.30,<2"]

[project.scripts]
kairospy = "kairospy.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kairospy*"]
exclude = ["kairospy.research", "kairospy.research.*", "research", "research.*"]
